--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,7 +1,7 @@
-name: Development Workflow
+name: Production Workflow
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -31,8 +31,6 @@ jobs:
         run: npx eslint --ext .js src/ --fix-dry-run
       - name: Run test
         run: npm test -- --coverage
-      - name: Upload Coverage
-        uses: codecov/codecov-action@v3
 
   security-checks:
     name: Run security checks
@@ -47,7 +45,7 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=high
+          args: --severity-threshold=critical
 
   bump_version:
     name: Bump version
@@ -70,19 +68,6 @@ jobs:
           RELEASE_BRANCHES: "main"
           DEFAULT_BUMP: patch
 
-  get_commit_sha:
-    name: Get SHA
-    needs: [lint-test, security-checks]
-    runs-on: ubuntu-latest
-    outputs:
-      sha_output: ${{ steps.short_sha_generator.outputs.SHORT_SHA }}
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-      - name: Get short SHA
-        id: short_sha_generator
-        run: echo "SHORT_SHA=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-
   push_to_docker:
     name: Push image to docker
     needs: [bump_version, get_commit_sha]
@@ -94,7 +79,28 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
           image: ccazaly95/ci-cd-app
-          tags: ${{ needs.get_commit_sha.outputs.sha_output }}-SNAPSHOT, ${{ needs.bump_version.outputs.new_tag }}-SNAPSHOT
+          tags: latest, ${{ needs.bump_version.outputs.new_tag }}
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+  deploy_app:
+    name: Deploy to Production
+    needs: [push_to_docker, bump_version]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: build
+        run: npm run build --if-present
+      - name: Inject version
+        run: |
+          echo "window['appConfig'] = {\"version\": \"${{ needs.bump_version.outputs.new_tag }}\"}" > build/app-config.js
+      - name: Deploy app
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_email: ${{ secrets.HEROKU_EMAIL }}
+          heroku_app_name: "ci-cd-app-cc"
